--- a/src/app/modules/commons/users/signup/signupUser.html
+++ b/src/app/modules/commons/users/signup/signupUser.html
@@ -43,8 +43,7 @@
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
                 <input id="login" name="login" type="text" class="validate" ng-model="signup.account.login" required
-                       tabindex="3"
-                       ng-pattern="'[a-zA-Z0-9_\-]{3,}'">
+                       tabindex="3" ng-pattern="'[a-zA-Z0-9_\-]{3,}'">
                 <label for="login" class="mandatory" translate="signupStartPage.form.label.login"></label>
                 <span class="small colorAccent-text invalid"
                       ng-if="signupStartPageForm.login.$error.pattern"
@@ -101,7 +100,7 @@
         </div>
 
         <!-- Captcha -->
-        <div class="row container">
+        <div class="row container" ng-if="single">
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m10 input-field">
                 <div vc-recaptcha ng-model="signup.captcha"
