--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -11,7 +11,8 @@
                     <li><a class="dropdown-header-button" href="#!" data-activates="dropdown-header"><span
                             translate="navbar.concept"></span> <i class="material-icons right">arrow_drop_down</i></a>
                     </li>
-                    <li><a href="#/about">A propos</a></li>
+                    <li><a href="#/pricing" translate="navbar.pricing"/></li>
+                    <li><a href="#/about" translate="navbar.aboutUs"/></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color" alt="icon"
