--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -1,13 +1,13 @@
 <div class="aboutUs">
     <div class="container">
-        <h2 class="center-align dark-text-color" translate="about.title"></h2>
+        <h2 class="center-align accent-text-color" translate="about.title"></h2>
         <div class="row primary-text-color">
             <div class="col s12 m4">
                 <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
+                    <div class="card-image waves-effect waves-block waves-light dark-primary-color">
                         <img class="activator responsive-img" src="assets/images/Christophe.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b translate="about.christophe.title"></b><i
                                 class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color" translate="about.christophe.role"></h5>
@@ -27,10 +27,10 @@
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
+                    <div class="card-image waves-effect waves-block waves-light dark-primary-color">
                         <img class="activator responsive-img" src="assets/images/Pascal.JPG" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b translate="about.pascal.title"></b><i
                                 class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color" translate="about.pascal.role"></h5>
@@ -49,10 +49,10 @@
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
+                    <div class="card-image waves-effect waves-block waves-light dark-primary-color">
                         <img class="activator responsive-img" src="assets/images/Xavier.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b translate="about.xavier.title"></b><i
                                 class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color" translate="about.xavier.role"></h5>
@@ -75,10 +75,10 @@
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
+                    <div class="card-image waves-effect waves-block waves-light dark-primary-color">
                         <img class="activator responsive-img" src="assets/images/mathieu.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b translate="about.mathieu.title"></b><i
                                 class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color" translate="about.mathieu.role"></h5>
@@ -95,10 +95,10 @@
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
+                    <div class="card-image waves-effect waves-block waves-light dark-primary-color">
                         <img class="activator responsive-img" src="assets/images/florent.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b translate="about.florent.title"></b><i
                                 class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color" translate="about.florent.role"></h5>
@@ -115,10 +115,10 @@
             </div>
             <div class="col s12 m4">
                 <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
+                    <div class="card-image waves-effect waves-block waves-light dark-primary-color">
                         <img class="activator responsive-img" src="assets/images/Jerome.JPG" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b translate="about.jerome.title"></b><i
                                 class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color" translate="about.jerome.role"></h5>
