--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -1,7 +1,7 @@
 <div class="home dark-primary-color" id="download">
     <div class="container">
         <h4 class="center" translate="landing.area-4.title"></h4>
-        <p class="center hide-on-small-only"><b translate="landing.area-4.content"></b></p>
+        <p class="center hide-on-small-only" translate="landing.area-4.content"></p>
         <div class="center stores">
             <a href="https://play.google.com/store/apps/details?id=com.qaobee.hand" target="_blank" class="light-text-color"
                rel="noopener">
