--- a/src/app/components/directives/public/pricing/pricing.html
+++ b/src/app/components/directives/public/pricing/pricing.html
@@ -10,110 +10,115 @@
         
     </div>
     <div class="row white pricing">
-        <div class="col s12 m3 light-primary-color" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <h4 translate="pricing.titleIndividual"></h4>
-        </div>
-        <div class="col s12 m9 light-primary-color" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <h4 translate="pricing.titleClub"></h4>
-        </div>
         
-        <div class="col s12 m3 default-primary-color">
-            <i class="fa fa-fw fa-user fa-3x white-text" style="padding:2px;"></i>&nbsp;
-            <h5 translate="pricing.titleIndividualPlan"></h5>
+        <div class="card col s12 m3">
+            <div class="card-title default-primary-color center-align">
+                <i class="fa fa-fw fa-user fa-2x white-text" style="padding:2px;"></i>&nbsp;
+                <h5 translate="pricing.titleIndividualPlan"></h5>
+            </div>
+            <div class="card-title white dark-text-color" style="height:200px;">
+                <span class="light-text-color activator">{{'pricing.conditionIndividualPlan' | translate}}<i class="material-icons right">help</i></span>
+                <h3 translate="pricing.priceIndividualPlanM"></h3>
+                <h5 class="right" translate="pricing.priceIndividualPlanA"></h5 >
+            </div>
+            <div class="card-reveal center-align">
+              <span class="card-title default-primary-color"><i class="fa fa-fw fa-user" style="padding:2px;"></i>&nbsp; {{'pricing.titleIndividualPlan' | translate}}<i class="material-icons right">close</i></span>
+                <br><br>    
+              <h6 class=" light-text-color" translate="pricing.features.individual"></h6>
+                <br><br>    
+                <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white default-primary-color">
+                </a>
+                <br><br>
+            </div>
             
-        </div>
-        <div class="col s12 m3 dark-primary-color">
-            <i class="fa fa-fw fa-user-plus fa-3x white-text" style="padding:2px;"></i>&nbsp;
-            <h5 translate="pricing.titleClubSmallPlan"></h5>
-        </div>
-        <div class="col s12 m3 secondary-color">
-            <i class="fa fa-fw fa-user-times fa-3x white-text" style="padding:2px;"></i>&nbsp;
-            <h5 translate="pricing.titleClubMediumPlan"></h5>
-            
-        </div>
-        <div class="col s12 m3 accent-color">
-            <i class="fa fa-fw fa-users fa-3x white-text" style="padding:2px;"></i>&nbsp;
-            <h5 translate="pricing.titleClubLargePlan"></h5>
-            
-        </div>
-
-        <div class="col s12 m3" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <h3 translate="pricing.priceIndividualPlanM"></h3>
-            <h6 class="right" translate="pricing.priceIndividualPlanA"></h6>
-            <p>&nbsp;</p>
-            <h5 class="light-text-color" translate="pricing.conditionIndividualPlan"></h5>
-        </div>
-        <div class="col s12 m3" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <h3 translate="pricing.priceClubSmallPlanM"></h3>
-            <h6 class="right" translate="pricing.priceClubSmallPlanA"></h6>
-            <p>&nbsp;</p>
-            <h5 translate="pricing.conditionClubSmallPlan"></h5>
-        </div>
-        <div class="col s12 m3" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <h3 translate="pricing.priceClubMediumPlanM"></h3>
-            <h6 class="right" translate="pricing.priceClubMediumPlanA"></h6>
-            <p>&nbsp;</p>
-            <h5 class="secondary-text-color" translate="pricing.conditionClubMediumPlan"></h5>
-        </div>
-        <div class="col s12 m3" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <h3 translate="pricing.priceClubLargePlanM"></h3>
-            <h6 class="right" translate="pricing.priceClubLargePlanA"></h6>
-            <p>&nbsp;</p>
-            <h5 class="accent-text-color" translate="pricing.conditionClubLargePlan"></h5>
-        </div>
-        
-        
-        <div class="col s12">&nbsp;</div>
-        
-        <div class="col s12 m3">
-            <a href="javascript:void(0)" ng-click="openSignup()" translate="commons.buttons.validate"
-                        class="btn waves-effect waves-white default-primary-color">
+            <div class="card-action">
+              <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white default-primary-color">
                 </a>
-        </div>
-        <div class="col s12 m3">
-            <a href="javascript:void(0)" ng-click="openSignup()" translate="commons.buttons.validate"
-                        class="btn waves-effect waves-white dark-primary-color">
-                </a>
-
-        </div>
-        <div class="col s12 m3">
-            <a href="javascript:void(0)" ng-click="openSignup()" translate="commons.buttons.validate"
-                        class="btn waves-effect waves-white secondary-color">
-                </a>
-        </div>
-        <div class="col s12 m3">
-            <a href="javascript:void(0)" ng-click="openSignup()" translate="commons.buttons.validate"
-                        class="btn waves-effect waves-white accent-color">
-                </a>
+            </div>
         </div>
         
-        <div class="col s12">&nbsp;</div>
+        <div class="card col s12 m3">
+            <div class="card-title dark-primary-color center-align">
+                <i class="fa fa-fw fa-user-plus fa-2x white-text" style="padding:2px;"></i>&nbsp;
+                <h5 translate="pricing.titleClubSmallPlan"></h5>
+            </div>
+            <div class="card-title white dark-text-color" style="height:200px;">
+                <span class=" light-text-color activator">{{'pricing.conditionClubSmallPlan' | translate}}<i class="material-icons right">helpt</i></span>
+                <h3 translate="pricing.priceClubSmallPlanM"></h3>
+                <h5 class="right" translate="pricing.priceClubSmallPlanA"></h5>
+            </div>
+            <div class="card-reveal left-align">
+              <span class="card-title dark-primary-color"><i class="fa fa-fw fa-user-plus" style="padding:2px;"></i>&nbsp; {{'pricing.titleClubSmallPlan' | translate}}<i class="material-icons right">close</i></span>
+                <br><br>
+              <h6 class=" light-text-color" translate="pricing.features.clubSmall"></h6>
+                <br><br>    
+                <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white dark-primary-color">
+                </a>
+                <br><br>
+            </div>
+            <div class="card-action">
+              <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white dark-primary-color">
+                </a>
+            </div>
+        </div>
         
-        <div class="col s12 m3 left-align" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.gerer"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collecter"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.analyser"></span></p>
-            <p>&nbsp;</p>
+        <div class="card col s12 m3">
+            <div class="card-title secondary-color center-align">
+                <i class="fa fa-fw fa-user-times fa-2x white-text" style="padding:2px;"></i>&nbsp;
+                <h5 translate="pricing.titleClubMediumPlan"></h5>
+            </div>
+            <div class="card-title white dark-text-color" style="height:200px;">
+                <span class="light-text-color activator">{{'pricing.conditionClubMediumPlan' | translate}}<i class="material-icons right">help</i></span>
+                <h3  translate="pricing.priceClubMediumPlanM"></h3>
+                <h5 class="right" translate="pricing.priceClubMediumPlanA"></h5>
+            </div>
+            <div class="card-reveal left-align">
+              <span class="card-title secondary-color"><i class="fa fa-fw fa-user-times" style="padding:2px;"></i>&nbsp; {{'pricing.titleClubMediumPlan' | translate}}<i class="material-icons right">close</i></span>
+                <br><br>
+              <h6 class=" light-text-color" translate="pricing.features.clubMedium"></h6>
+                <br><br>    
+                <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white secondary-color">
+                </a>
+                <br><br>
+            </div>
+            <div class="card-action">
+              <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white secondary-color">
+                </a>
+            </div>
         </div>
-        <div class="col s12 m3 left-align" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.gerer"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collecter"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.analyser"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collaborer"></span></p>
-        </div>
-        <div class="col s12 m3 left-align" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.gerer"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collecter"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.analyser"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collaborer"></span></p>
-        </div>
-        <div class="col s12 m3 left-align" style="border: dotted 1px rgba(0, 0, 0, .3);">
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.gerer"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collecter"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.analyser"></span></p>
-            <p><i class="fa fa-fw fa-check-square" style="padding:2px;"></i> <span translate="pricing.features.collaborer"></span></p>
+        
+        <div class="card col s12 m3">
+            <div class="card-title accent-color center-align">
+                <i class="fa fa-fw fa-users fa-2x white-text" style="padding:2px;"></i>&nbsp;
+                <h5 translate="pricing.titleClubLargePlan"></h5>
+            </div>
+            <div class="card-title white dark-text-color" style="height:200px;">
+                <span class="light-text-color activator">{{'pricing.conditionClubLargePlan' | translate}}<i class="material-icons right">help</i></span>
+                <h3 translate="pricing.priceClubLargePlanM"></h3>
+                <h5 class="right" translate="pricing.priceClubLargePlanA"></h5>
+            </div>
+            <div class="card-reveal left-align">
+              <span class="card-title accent-color"><i class="fa fa-fw fa-user-times" style="padding:2px;"></i>&nbsp; {{'pricing.titleClubLargePlan' | translate}}<i class="material-icons right">close</i></span>
+                <br><br>
+              <h6 class=" light-text-color" translate="pricing.features.clubLarge"></h6>
+                <br><br>    
+                <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white accent-color">
+                </a>
+                <br><br>
+            </div>
+            <div class="card-action">
+              <a href="/#/signupStart" translate="commons.buttons.subscribe"
+                    class="btn waves-effect waves-white accent-color">
+                </a>
+            </div>
         </div>
     </div>
-    
 </div>
 
