--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -20,8 +20,7 @@
                     <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"
                            rel="noopener"><img src="assets/images/facebook.png" class="social-icon" alt="icon"></a></li>
                     <li>
-                        <a href="javascript:void(0)" class="waves-effect waves-white secondary-color"
-                           ng-click="openSignup()"
+                        <a href="#/pricing" class="waves-effect waves-white secondary-color"
                            translate="navbar.signup"></a>
                     </li>
                     <li>
